crates/goby-core/src/snapshots/goby_core__ir__tests__print_list_lit_with_spread.snap
---
source: crates/goby-core/src/ir.rs
assertion_line: 646
expression: fmt_ir(&m)
---
decl items: ? =
  [1, 2, ..tail]
