crates/goby-core/src/snapshots/goby_core__ir__tests__print_record_lit.snap
---
source: crates/goby-core/src/ir.rs
assertion_line: 901
expression: fmt_ir(&m)
---
decl pair: ? =
  Pair(left: 1, right: 2)
