crates/goby-core/src/snapshots/goby_core__ir__tests__print_seq.snap
---
source: crates/goby-core/src/ir.rs
assertion_line: 570
expression: fmt_ir(&m)
---
decl seq_example: Unit =
  seq
    call Print.print("a")
  =>
    ()
