crates/goby-core/src/snapshots/goby_core__ir__tests__print_str_lit.snap
---
source: crates/goby-core/src/ir.rs
assertion_line: 448
expression: fmt_ir(&m)
---
decl greeting: Str =
  "hello"
