crates/goby-core/src/snapshots/goby_core__ir__tests__print_tuple_lit.snap
---
source: crates/goby-core/src/ir.rs
assertion_line: 885
expression: fmt_ir(&m)
---
decl pair: ? =
  (1, true)
