crates/goby-core/src/snapshots/goby_core__ir__tests__print_var.snap
---
source: crates/goby-core/src/ir.rs
assertion_line: 459
expression: fmt_ir(&m)
---
decl f(x: Int): Int =
  x
