crates/goby-core/src/snapshots/goby_core__ir__tests__print_with_handler.snap
---
source: crates/goby-core/src/ir.rs
assertion_line: 717
expression: fmt_ir(&m)
---
decl main_with: Unit =
  with
    handler
      print(msg, resume) ->
        resume ()
  do
    call Print.print("hello")
